Chore : Remove unused from projects
